--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Transforms\ForwardRegisters.cs" />
     <Compile Include="Transforms\FuseMemoryAccesses.out.cs" />
     <Compile Include="Transforms\GlobalValueNumbering.cs" />
+    <Compile Include="Transforms\Inlining.cs" />
     <Compile Include="Transforms\InstructionSimplification.out.cs" />
     <Compile Include="Transforms\IntraproceduralOptimization.cs" />
     <Compile Include="Transforms\JumpThreading.cs" />
